--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,25 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__title/profile__title.css');
-/* @import url('../'); */
+@import url('../blocks/elements/elements.css');
+@import url('../blocks/element/element.css');
+@import url('../blocks/element/__info/element__info.css');
+@import url('../blocks/element/__title/element__title.css');
+@import url('../blocks/element/__like-button/element__like-button.css');
+@import url('../blocks/element/__image/element__image.css');
+/* @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__close-button/popup__close-button.css');
+@import url('../blocks/popup/__title/popup__title.css');
+@import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error-active.css');
+@import url('../blocks/popup/__input-error/popup__input-error.css');
+@import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
+@import url('../blocks/popup/__input-error/_type/popup__input-error_type_error.css');
+@import url('../blocks/popup/__input-error/_type/popup__input-error_type_error-active.css');
+@import url('../blocks/popup/__input-error/_type/popup__input-error_type_error-active.css'); */
