--- a/pages/index.css
+++ b/pages/index.css
@@ -17,9 +17,9 @@
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/element/__like-button/element__like-button.css');
 @import url('../blocks/element/__image/element__image.css');
-/* @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
-@import url('../blocks/popup/popup.css');
+/* @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__close-button/popup__close-button.css');
