--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button {
   background: transparent;
-  background-image: url(/images/plus.svg);
+  background-image: url(../../../images/add.svg);
   background-repeat: no-repeat;
   background-position: center;
   min-width: 150px;
