--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
   background: transparent;
-  background-image: url(./../../../images/edit.svg);
+  background-image: url(../../../images/edit.svg);
   background-repeat: no-repeat;
   background-position: center;
   width: 24px;
