style(header && profile): add 320 media

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,3 +7,10 @@
   width: 100%;
   row-gap: 7px;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__info {
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+}
