--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,15 @@
 .header {
   max-width: 880px;
-  margin: 0 200px;
+  margin: 0 auto;
   padding: 45px 0 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    margin: 0;
+    padding-top: 28px;
+    padding-left: 27px;
+    padding-bottom: 31.6px;
+  }
 }
