--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,5 +4,10 @@
   align-items: center;
   max-width: 880px;
   margin: 34px 200px 50px;
+}
 
+@media screen and (max-width: 320px) {
+  .profile {
+    margin: 38.25px auto 0;
+  }
 }
