--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,9 @@
   padding: 44px 0 36px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding: 27px;
+  }
+}
