--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,25 @@
 .profile__add-button {
   background: transparent;
-  background-image: url(../../../images/add.svg);
+  background-image: url(../../../images/plus.svg);
   background-repeat: no-repeat;
   background-position: center;
   min-width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.profile__add-button:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 320px) {
+  .profile__add-button {
+    max-width: 282px;
+    width: 100%;
+  }
 }
