--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,3 +7,8 @@
   padding-right: 30px;
   width: 100%;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__info {
+    margin: 22.25px 19px 29px;  }
+}
