--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,3 +7,12 @@
   margin: 0 18px 0 0;
   display: inline;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__title {
+    font-size: 27px;
+    line-height: 33px;
+    margin-left: 46px;
+    margin-right: 9px;
+  }
+}
