--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,11 @@
   margin: 0 auto;
   padding: 40px 0 47px;
 }
+
+@media screen and (max-width: 320px) {
+  .profile {
+    flex-direction: column;
+    padding-right: 19px;
+    padding-left: 19px;
+  }
+}
