--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,18 +1,24 @@
 .elements {
   display: grid;
   margin: 0;
-  margin: 0 200px 67px;
+  margin: 0 auto 67px;
   max-width: 880px;
   grid-template-columns: repeat(3, 282px);
   gap: 17px;
   row-gap: 23px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 820px) {
   .elements {
     margin: 0 19px 44px;
-    grid-template-columns: repeat(1, 282px);
+    grid-template-columns: repeat(2, 282px);
     gap: 20px;
     row-gap: 23px;  }
+}
+
+@media screen and (max-width: 600px) {
+  .elements {
+    grid-template-columns: repeat(1, 282px);
+      }
 }
   
