--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,10 @@
 .page {
   background-color: #000000;
 }
+
+@media screen and (max-width: 945px) {
+  .page {
+    margin-left: 19px;
+    margin-right: 19px;
+  }
+}
