--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,6 +8,12 @@
   display: inline;
 }
 
+@media screen and (max-width: 820px) {
+  .profile__title {
+    font-size: 32px;
+    line-height: 35px;  }
+}
+
 @media screen and (max-width: 320px) {
   .profile__title {
     font-size: 27px;
