--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -17,7 +17,14 @@
   outline: none;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 910px) {
+  .profile__add-button {
+    min-width: 80px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .profile__add-button {
     max-width: 282px;
     width: 100%;
