--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,11 +7,21 @@
   padding: 40px 0 47px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 910px) {
+  .profile {
+    max-width: 600px;
+    margin: 0 36px 44px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .profile {
     flex-direction: column;
     padding-right: 19px;
     padding-left: 19px;
     padding-bottom: 36px;
+    text-align: center;
+    row-gap: 23px;
+    max-width: 210px;
   }
 }
