--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,7 @@
 .element {
-  max-width: 100%;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  min-width: 282px;
+
 }
