--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -19,8 +19,8 @@
 
 @media screen and (max-width: 910px) {
   .profile__add-button {
-    min-width: 80px;
-    height: 40px;
+    /* min-width: 80px;
+    height: 40px; */
   }
 }
 
