--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,6 +7,13 @@
   padding: 40px 0 47px;
 }
 
+@media screen and (max-width: 940px) {
+  .profile {
+    padding-right: 36px;
+    padding-left: 36px;
+  }
+}
+
 @media screen and (max-width: 535px) {
   .profile {
     flex-direction: column;
