--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -14,8 +14,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     row-gap: 23px;
-    padding-left: 19px;
-    padding-right: 19px;  }
+      }
 }
 
 @media screen and (max-width: 600px) {
