--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -17,9 +17,9 @@
   outline: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 535px) {
   .profile__add-button {
-    max-width: 282px;
+    min-width: 282px;
     width: 100%;
   }
 }
