--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -20,7 +20,10 @@
 
 @media screen and (max-width: 320px) {
   .profile__edit-button {
+    position: absolute;
     width: 18px;
     height: 18px;
+    margin-left: 10px;
+    margin-top: 10px;
   }
 }
