--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,10 +7,12 @@
   margin: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 535px) {
   .profile__subtitle {
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    margin-bottom: 32px;
+    margin-top: 10px;
   }
 }
