--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,7 +4,8 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  margin: 0 18px 0 0;
+  margin: 0;
+  margin-right: 20px;
   display: inline;
 }
 
