--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(3, 282px);
   gap: 17px;
   row-gap: 23px;
+  padding: 0;
 }
 
 @media screen and (max-width: 910px) {
