--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -16,5 +16,6 @@
   cursor: pointer;
 }
 .element__like-button:active {
+  opacity: 0.3;
   background-image: url(./../../../images/black-heart.svg);
 }
