--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -15,3 +15,11 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 535px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+    left: calc(50% - 140px);
+  }
+}
