--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 1;
-  /* visibility: hidden; */
+  visibility: hidden;
   display: flex;
 }
