--- a/pages/index.css
+++ b/pages/index.css
@@ -24,5 +24,8 @@
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__title/popup__title.css');
-@import url('../blocks/popup/__name/popup__name.css');
-@import url('../blocks/popup/__job/popup__job.css');
+@import url('../blocks/form/form.css');
+@import url('../blocks/form/__container/form__container.css');
+@import url('../blocks/form/__field/form__field.css');
+@import url('../blocks/form/__input/form__input.css');
+@import url('../blocks/form/__submit-button/form__submit-button.css');
