--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,8 +5,8 @@
   width: 100%;
   height: 100%;
   opacity: 1;
-  /* visibility: hidden; */
   display: flex;
+  /* justify-content: center; */
   width: 430px;
   height: 330px;
   left: calc(50% - 215px);
