--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,13 +4,15 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin: 0 0 24px;
   color: #000000;
+  margin: 34px 36px;
+  min-width: 358px;
 }
 
 @media screen and (max-width: 535px){
   .popup__title{
     font-size: 18px;
     line-height: 22px;
+    margin: 25px 22px;
   }
 }
