--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,6 +6,7 @@
   height: 100%;
   opacity: 1;
   display: flex;
+  flex-direction: column;
   width: 430px;
   height: 330px;
   left: calc(50% - 215px);
