--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url('../blocks/profile/__avatar/profile__avatar.css');
 @import url('../blocks/profile/__edit-button/profile__edit-button.css');
 @import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__edit-button_is-opened/profile__edit-button_is-opened.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__title/profile__title.css');
 @import url('../blocks/elements/elements.css');
