--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  position: absolute;
+  position: relative;
   opacity: 1;
   display: flex;
   flex-direction: column;
@@ -19,3 +19,5 @@
     left: calc(50% - 140px);
   }
 }
+
+/* как расположить попап посередине */
