--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,10 +3,10 @@
   opacity: 1;
   display: flex;
   flex-direction: column;
-  width: 430px;
-  height: 330px;
-  left: calc(50% - 215px);
-  top: calc(50% - 315px);
+  max-width: 430px;
+  /* height: 330px; */
+  /* left: calc(50% - 215px);
+  top: calc(50% - 315px); */
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
@@ -14,9 +14,9 @@
 
 @media screen and (max-width: 535px) {
   .popup__container {
-    width: 282px;
-    height: 322px;
-    left: calc(50% - 140px);
+    max-width: 282px;
+    max-height: 322px;
+    /* left: calc(50% - 140px); */
   }
 }
 
