--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,7 +6,7 @@
   line-height: 29px;
   color: #000000;
   margin: 34px 36px;
-  min-width: 358px;
+  /* min-width: 358px; */
 }
 
 @media screen and (max-width: 535px){
