--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,9 @@
 .popup__container {
-  /* position: relative; */
   opacity: 1;
   display: flex;
   flex-direction: column;
-  max-width: 430px;
-  /* height: 330px; */
-  /* left: calc(50% - 215px);
-  top: calc(50% - 315px); */
+  width: 430px;
+  max-height: 330px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
@@ -16,8 +13,5 @@
   .popup__container {
     max-width: 282px;
     max-height: 322px;
-    /* left: calc(50% - 140px); */
   }
 }
-
-/*расположить попап посередине */
