--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,10 @@
 .popup__container {
+  position: relative;
   opacity: 1;
   display: flex;
   flex-direction: column;
   width: 430px;
-  max-height: 330px;
+  height: 330px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
