--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,4 +1,9 @@
 .form__input {
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
