--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -1,10 +1,16 @@
 .form__submit-button {
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
   background: #000;
   background-repeat: no-repeat;
   background-position: center;
   max-width: 358px;
   height: 50px;
-  border: 2px solid #000;
+  border: none;
+  border-radius: 2px;
   margin: 0;
   margin-top: 48px;
   color: #fff;
@@ -17,7 +23,9 @@
 
 @media screen and (max-width: 535px) {
   .form__submit-button {
+    font-size: 14px;
+    line-height: 17px;
     max-width: 238px;
     height: 46px;
   }
-}
+} 
