--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -18,12 +18,16 @@
   outline: none;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 682px) {
   .profile__edit-button {
-    position: absolute;
+    /* position: absolute; */
     width: 18px;
     height: 18px;
-    margin-left: 10px;
-    margin-top: 10px;
+    margin: 0;
+    padding: 0;
+    /* left: 430px; */
+    /* right: 234px; */
+    /* top: 200px; */
+    /* bottom: 29px; */
   }
 }
