--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,7 +6,7 @@
   line-height: 48px;
   margin: 0;
   margin-right: 12px;
-  display: inline;
+  /* display: inline; */
 }
 
 @media screen and (max-width: 820px) {
