--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,15 +4,15 @@
   display: flex;
   flex-direction: column;
   width: 430px;
-  height: 330px;
+  /* height: 330px; */
   background: #FFFFFF;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
 
 @media screen and (max-width: 535px) {
   .popup__container {
     max-width: 282px;
-    max-height: 322px;
+    /* max-height: 322px; */
   }
 }
