--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,7 +5,7 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 34px 36px;
+  margin: 34px 36px 24px;
 }
 
 @media screen and (max-width: 535px){
