--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,8 +6,23 @@
   padding: 0 0 60px;
 }
 
+
 @media screen and (max-width: 1024px) {
   .footer {
     padding-left: 19px;
+  }
+}
+
+@media screen and (max-width: 944px) {
+  .footer {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    margin: 0;
+    padding-left: 0;
   }
 }
