--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -10,15 +10,18 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 340px;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 984px) {
   .profile__title {
-    font-size: 32px;
-    line-height: 35px;  }
+    font-size: 29px;
+    line-height: 35px;
+    max-width: 230px;
+  }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   .profile__title {
     font-size: 27px;
     line-height: 33px;
