--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,18 +7,25 @@
   padding: 40px 0 47px;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 944px) {
   .profile {
     padding-right: 36px;
     padding-left: 36px;
   }
 }
 
-@media screen and (max-width: 535px) {
+@media screen and (max-width: 695px) {
   .profile {
     flex-direction: column;
     text-align: center;
     max-width: 220px;
-    padding-bottom: 40px;
+    padding-bottom: 32px;
+    row-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 535px) {
+  .profile {
+    row-gap: 10px;
   }
 }
