fix(profile): изменить позиционирование edit-button

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,16 +1,19 @@
 .profile__edit-button {
+  display: block;
   background: transparent;
   background-image: url(../../../images/edit.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: auto;
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
-  position: absolute;
+  /* position: absolute; */
   left: 342px;
   right: 0px;
   top: 12px;
   bottom: 0px;
+  flex-shrink: 0;
 }
 
 .profile__edit-button:hover {
