--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -8,4 +8,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
   width: 100%;
+  position: relative;
+  padding-top: 30px;
+  max-width: 358px;
 }
