--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,12 @@
 .profile__info {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   color: #FFFFFF;
   padding-left: 30px;
   padding-right: 30px;
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
 
 @media screen and (max-width: 820px) {
