--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,7 +8,6 @@
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
-  /* position: absolute; */
   left: 342px;
   right: 0px;
   top: 12px;
@@ -25,8 +24,9 @@
   outline: none;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 820px) {
   .profile__edit-button {
+    position: absolute;
     left: 270px;
     top: 7px;
     }
