--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,11 +6,11 @@
   padding-left: 30px;
   padding-right: 30px;
   width: 100%;
-  /* position: relative; */
 }
 
 @media screen and (max-width: 820px) {
   .profile__info {
+    position: relative;
     padding-left: 19px;
     padding-right: 19px;
   }
