--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,7 +14,10 @@
 
 @media screen and (max-width: 320px) {
   .header {
-    padding: 26px 5px;
     margin: 0;
+    padding-top: 24px;
+    padding-bottom: 28px;
+    padding-left: 27px;
+    min-width: 293px;
   }
 }
