--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,10 +8,6 @@
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
-  left: 342px;
-  right: 0px;
-  top: 12px;
-  bottom: 0px;
   flex-shrink: 0;
 }
 
@@ -43,6 +39,13 @@
 
 @media screen and (max-width: 450px) {
   .profile__edit-button {
-    left: 230px;
+    left: 250px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__edit-button {
+    left: 271px;
+    top: 8px;
   }
 }
