--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -13,11 +13,14 @@
     position: relative;
     padding-left: 19px;
     padding-right: 19px;
+    min-width: 285px;
   }
 }
   
 @media screen and (max-width: 320px) {
   .profile__info {
-    margin-top: 22.25px;
-    padding-left: 30px;  }
+    margin-top: 18px;
+    padding-left: 30px;
+    justify-content: center;  
+  }
 }
