--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   max-width: 340px;
   padding-right: 20px;
+  padding-top: 9px;
 }
 
 @media screen and (max-width: 950px) {
@@ -33,6 +34,14 @@
     text-align: center;
     margin-bottom: 32px;
     margin-top: 13px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__subtitle {
+    margin-bottom: 23px;
+    margin-top: 7px;
+
   }
 }
 
