fix(content): исправить + на 320

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -24,3 +24,8 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .profile__add-button {
+    background-image: url(../../../images/plus-16.svg);  }
+}
