fix(popup): исправить + на 320

--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -30,3 +30,10 @@
     height: 46px;
   }
 } 
+
+@media screen and (max-width: 320px) {
+  .form__submit-button {
+    margin-top: 38px;
+    margin-bottom: 2px;
+  }
+} 
