ref: prettier иерархия отступов

--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -1,9 +1,6 @@
 .element {
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 10px;
   min-width: 282px;
   position: relative;
 }
-
-
-  
