--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -3,7 +3,7 @@
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
