--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,11 +1,10 @@
 .footer {
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   max-width: 880px;
   color: #545454;
   margin: 0 auto;
   padding: 0 0 60px;
 }
-
 
 @media screen and (max-width: 1024px) {
   .footer {
