--- a/src/blocks/form/__container/form__container.css
+++ b/src/blocks/form/__container/form__container.css
@@ -1,7 +1,7 @@
 .form__container {
   display: flex;
   flex-direction: column;
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
