--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
   background-position: center;
   min-width: 150px;
   height: 50px;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   border-radius: 2px;
 }
 
@@ -27,5 +27,6 @@
 
 @media screen and (max-width: 320px) {
   .profile__add-button {
-    background-image: url(../../../images/plus-16.svg);  }
+    background-image: url(../../../images/plus-16.svg);
+  }
 }
