--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,7 +7,7 @@
   background-size: auto;
   width: 24px;
   height: 24px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   flex-shrink: 0;
   margin-right: 18px;
 }
@@ -26,7 +26,7 @@
     position: absolute;
     left: 270px;
     top: 7px;
-    }
+  }
 }
 
 @media screen and (max-width: 695px) {
