--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-left: 30px;
   padding-right: 30px;
   width: 100%;
@@ -19,10 +19,10 @@
 
 @media screen and (max-width: 695px) {
   .profile__info {
-    justify-content: center; 
+    justify-content: center;
   }
 }
-  
+
 @media screen and (max-width: 320px) {
   .profile__info {
     margin-top: 18px;
